# DeepSleep-beta

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH.md  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  pyproject.toml
.gothub/: pull_request_template.md
.gothub/ISSUE_TEMPLATE/: bug_report.md  featur_request.md
.gothub/workflows/: ci.yml  publish.yml
src/deepsleep_ai/: _init_.py  cli.py  config.py  llm_client.py  memory_manager.py  watcher.py
tests/: test_cli.py  test_concurrency.py  test_doctor.py  test_encryption.py  test_lim_client.py  test_memory_manager.py  test_security.py  test_watcher.py
